--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io/profile/jeanD1300" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by
+        >Frontend Mentor. </a
+       
+      > <br />Coded by
       <a href="https://www.frontendmentor.io/profile/jeanD1300">JeanD1300</a>.
     </div>
   </body>
